아웃박스 패턴에 대한 레스토랑 서비스 리팩토링